styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Hanken Grotesk", sans-serif;
  font-family: "Outfit", sans-serif;
}

body {
  background-color: hsl(217, 54%, 11%);
}

.container {
  justify-content: center;
}

.card,
.container,
.amount,
.avatar,
.eth,
.time,
#creator {
  display: flex;
}

.eth {
  width: 50%;
}

.amount {
  justify-content: space-between;
  align-items: center;
}

#creator {
  width: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
}

#creator p {
  padding-left: 5px;
}

.text {
  display: grid;
  align-content: space-between;
  height: 100%;
}

.card img {
  width: 100%;
  height: auto;
  border-radius: 8px;
}

.card {
  height: 460px;
  width: 280px;
  flex-direction: column;
  background-color: hsl(216, 50%, 16%);
  padding: 18px;
  border-radius: 10px;
  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
}

#cyan {
  color: hsl(178, 100%, 50%);
}

#lightblue {
  color: hsl(215, 51%, 70%);
}

.avatar {
  border-style: solid;
  color: hsl(215, 32%, 27%);
  border-width: 1px;
  border-bottom: none;
  border-right: none;
  border-left: none;
  align-items: center;
}

.avatar img {
  border-style: solid;
  border-width: 1px;
  border-color: white;
  border-radius: 30px;
}

.avatar img {
  width: 10%;
}

#white {
  color: white;
}

.text {
  margin-top: 10%;
}

#lightblue,
#cyan {
  margin-left: 5px;
}

